<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <Button
        android:id="@+id/btn_changesizequestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:text="@string/change_question_size" />

    <LinearLayout
        android:id="@+id/changequestion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/btn_smallsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small_size" />

        <RadioButton
            android:id="@+id/btn_meduimsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_size" />

        <RadioButton
            android:id="@+id/btn_largesize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_size" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_chnagebackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="150dp"
        android:text="@string/change_background" />

    <LinearLayout
        android:id="@+id/changebackground_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/btn_lightblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/btn_lightgreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/btn_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/btn_lightred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red" />
    </LinearLayout>

</FrameLayout>