<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Controller.Fragment.Cheat_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cheat_question"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/answer_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/str_true" />

    <Button
        android:id="@+id/show_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_cheat" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_back_cheat" />

</LinearLayout>