<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:gravity="center"
    tools:context=".Controller.GeoQuiz_Fragment">





    <Button
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/btn_setting" />

    <Button
        android:id="@+id/btn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        tools:text="@string/score" />

    <LinearLayout
        android:id="@+id/hideUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_questiom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_false" />

            <Button
                android:id="@+id/btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/next_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/btn_doublenext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_double_left_angle_arrows" />

                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_left_arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pre_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_arrow" />

                <ImageButton
                    android:id="@+id/btn_doublepre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fast_forward_double_right_arrows" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/cheat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/cheat_btn" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_reset"
        android:layout_width="59dp"
        android:layout_height="71dp"
        android:src="@drawable/ic_double_rotating_arrows" />
</LinearLayout>