<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mtext_Question"
    xmlns="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".GeoQuiz_Activity">


    <Button
        android:id="@+id/btn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        tools:text="@string/score" />

    <LinearLayout
        android:id="@+id/hideUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_questiom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_false" />

            <Button
                android:id="@+id/btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/next_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btn_doublenext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/double_leftarroeic"
                tools:src="@drawable/double_leftarroeic" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_leftarrow"
                tools:src="@drawable/ic_leftarrow" />

            <LinearLayout
                android:id="@+id/pre_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rigtarrow"
                    tools:src="@drawable/ic_rigtarrow" />

                <ImageButton
                    android:id="@+id/btn_doublepre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/double_rightarrowic"
                    tools:src="@drawable/double_rightarrowic" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_reset"
        android:layout_width="59dp"
        android:layout_height="71dp"
        android:src="@drawable/reset"
        tools:src="@drawable/reset" />

</LinearLayout>